[gd_scene format=3 uid="uid://bxgda17im6ruw"]

[ext_resource type="Texture2D" uid="uid://b7tldkknu3yln" path="res://lvl/tutorback.jpg" id="1_pu1o8"]
[ext_resource type="PackedScene" uid="uid://d3yec0rny5dax" path="res://GirlFriends/GirlHitbox.tscn" id="2_13fv4"]
[ext_resource type="Script" uid="uid://d0t6mm70o4" path="res://GirlFriends/TutorHitbox.gd" id="3_13fv4"]
[ext_resource type="FontFile" uid="uid://jp51yqa5chfc" path="res://Core/The Most.otf" id="3_m0pnn"]
[ext_resource type="Script" uid="uid://q2xrttnto3pa" path="res://lvl/TurnManager.gd" id="4_rjx6k"]
[ext_resource type="PackedScene" path="res://CardData/DeckCard.tscn" id="5_v3mde"]
[ext_resource type="PackedScene" uid="uid://f0b03p5ljpjf" path="res://CardData/CardManager.tscn" id="6_7p7e5"]
[ext_resource type="Script" uid="uid://dade0acwfe8qv" path="res://lvl/XOXOBar/ProgressBar.gd" id="7_lx5gf"]
[ext_resource type="Texture2D" uid="uid://chbvvo716378m" path="res://lvl/XOXOBar/HPBarUnder.png" id="8_6i5p8"]
[ext_resource type="Texture2D" uid="uid://5mtq1gijdush" path="res://lvl/XOXOBar/HPBarProgress.png" id="9_hypfh"]
[ext_resource type="Texture2D" uid="uid://dtuf1ren871xq" path="res://lvl/XOXOBar/XOXOBarUnder.png" id="10_fj0mw"]
[ext_resource type="Texture2D" uid="uid://cferfo6atp3hy" path="res://lvl/XOXOBar/XOXOBarProgress.png" id="11_qv144"]
[ext_resource type="Texture2D" uid="uid://dilchgtj8p6so" path="res://lvl/XOXOBar/CringeBarUnder.png" id="12_yr6d2"]
[ext_resource type="Texture2D" uid="uid://xth407w1lhqw" path="res://lvl/XOXOBar/CringeBarProgress.png" id="13_y44e5"]
[ext_resource type="AudioStream" uid="uid://ba0j37jy6pwma" path="res://Core/MainSound/voskresnoe-vdokhnovenie-2-29609a.mp3" id="14_d6oqk"]
[ext_resource type="SpineSkeletonDataResource" uid="uid://dkhwcw68rsxjh" path="res://GirlFriends/girlfrend1-skin/girlv1.tres" id="15_lqkjo"]
[ext_resource type="Script" uid="uid://4534gys2b4ny" path="res://lvl/TutorGirlSprite.gd" id="17_13fv4"]
[ext_resource type="AudioStream" uid="uid://dmx2cn3ba0iuw" path="res://Core/MainSFX/Короткий звук женщина стонет когда кончает.mp3" id="17_l6odt"]
[ext_resource type="FontFile" uid="uid://7bb2u83oo2uq" path="res://Core/Montserrat-Black.ttf" id="19_5jsyb"]
[ext_resource type="Script" uid="uid://dknlo3un74oge" path="res://lvl/victorytutor.gd" id="19_13fv4"]
[ext_resource type="AudioStream" uid="uid://crgojtcf6ch6q" path="res://Core/MainSFX/Звук взмаха рукой (mp3cut.net) (1).mp3" id="20_16b76"]
[ext_resource type="Shader" uid="uid://nw5oxtopa3dm" path="res://lvl/lvl.gdshader" id="20_fkcmp"]
[ext_resource type="AudioStream" uid="uid://dy8spyqfo8ei" path="res://Core/MainSFX/Удар в лицо 2 (mp3cut.net).mp3" id="21_4elxp"]
[ext_resource type="AudioStream" uid="uid://cewix4n40l5co" path="res://Core/MainSFX/Звук взяли одну карту из колоды.mp3" id="21_axhrf"]
[ext_resource type="AudioStream" uid="uid://b4c3ehyv3wn50" path="res://Core/MainSFX/cartoon-button-click-sound.mp3" id="22_4kc7n"]
[ext_resource type="Script" uid="uid://c0m2di5ibhdw" path="res://lvl/lose_layer.gd" id="23_uludq"]
[ext_resource type="Script" uid="uid://cv2vde1kdnx7g" path="res://lvl/cringe_layer.gd" id="24_r1pnm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ygi6m"]
bg_color = Color(0.047058824, 0.54901963, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.02745098, 0.33333334, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2fvvn"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y07bw"]
bg_color = Color(0.047058824, 0.54901963, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 6
border_color = Color(0.02745098, 0.33333334, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qy0b4"]
bg_color = Color(0.91764706, 0.42352942, 0.42352942, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 6
border_color = Color(0.48235294, 0.05490196, 0.05490196, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yrp1n"]
bg_color = Color(0.69411767, 0, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 6
border_color = Color(0.17254902, 0, 0.2509804, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_07afl"]
bg_color = Color(0.9372549, 0.8117647, 0.8901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x06o8"]
bg_color = Color(0.9372549, 0.8117647, 0.8901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.98975796, 0, 0.5368099, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nsg1c"]
shader = ExtResource("20_fkcmp")
shader_parameter/intensity = 1.0
shader_parameter/softness = 0.45
shader_parameter/inner_brightness = 0.0
shader_parameter/vignette_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e7d2v"]
bg_color = Color(0.9372549, 0.8117647, 0.8901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xoy05"]
bg_color = Color(0.9372549, 0.8117647, 0.8901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.98975796, 0, 0.5368099, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_07gt7"]
bg_color = Color(0.9372549, 0.8117647, 0.8901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.98975796, 0, 0.5368099, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_02tlh"]
bg_color = Color(0.9372549, 0.8117647, 0.8901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2mqnv"]
bg_color = Color(0.9372549, 0.8117647, 0.8901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bc1d3"]
bg_color = Color(0.9372549, 0.8117647, 0.8901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.98975796, 0, 0.5368099, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1cmit"]
bg_color = Color(0.9372549, 0.8117647, 0.8901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.98975796, 0, 0.5368099, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t08fx"]
bg_color = Color(0.9372549, 0.8117647, 0.8901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="Tutor" type="Node2D" unique_id=996713009]

[node name="Tutorback" type="Sprite2D" parent="." unique_id=386783603]
position = Vector2(960, 540)
scale = Vector2(0.98765427, 1)
texture = ExtResource("1_pu1o8")

[node name="GirlHitbox" parent="." unique_id=2028270037 instance=ExtResource("2_13fv4")]
position = Vector2(-30, 0)
script = ExtResource("3_13fv4")
max_hp = 25

[node name="TurnButton" type="Button" parent="." unique_id=1499370575]
offset_left = 1543.0
offset_top = 430.0
offset_right = 1896.0
offset_bottom = 511.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.12955844, 0.12955847, 0.12955844, 1)
theme_override_colors/font_hover_color = Color(0.288518, 0.28851798, 0.28851798, 1)
theme_override_fonts/font = ExtResource("19_5jsyb")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_ygi6m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ygi6m")
theme_override_styles/hover = SubResource("StyleBoxFlat_ygi6m")
text = "Skip to turn"

[node name="TurnManager" type="Node" parent="." unique_id=1243653056]
script = ExtResource("4_rjx6k")

[node name="Deck" type="Node" parent="." unique_id=2051021245]

[node name="DeckCard4" parent="Deck" unique_id=1688954903 instance=ExtResource("5_v3mde")]
offset_left = 1631.0
offset_top = 651.0
offset_right = 1881.0
offset_bottom = 1001.0

[node name="DeckCard3" parent="Deck" unique_id=1426525039 instance=ExtResource("5_v3mde")]
offset_left = 1610.0
offset_top = 669.0
offset_right = 1860.0
offset_bottom = 1019.0

[node name="DeckCard2" parent="Deck" unique_id=1170793909 instance=ExtResource("5_v3mde")]
offset_left = 1588.0
offset_top = 688.0
offset_right = 1838.0
offset_bottom = 1038.0

[node name="DeckCard1" parent="Deck" unique_id=305104201 instance=ExtResource("5_v3mde")]
offset_left = 1566.0001
offset_top = 707.0
offset_right = 1816.0001
offset_bottom = 1057.0

[node name="DeckLabel" type="Label" parent="Deck" unique_id=1743643295]
offset_left = 1553.0
offset_top = 769.0
offset_right = 1793.0
offset_bottom = 964.8333
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_m0pnn")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_2fvvn")
text = "x15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Playing cards" type="CanvasLayer" parent="." unique_id=969733357]

[node name="CardManager" parent="Playing cards" unique_id=102078610 instance=ExtResource("6_7p7e5")]

[node name="CostLabel" type="Label" parent="." unique_id=1967144846]
visible = false
offset_left = 1487.0
offset_top = 531.0
offset_right = 1916.0
offset_bottom = 641.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 80
text = "Energy: 8/8"

[node name="ProgressBar" type="CanvasLayer" parent="." unique_id=1155747999]
script = ExtResource("7_lx5gf")

[node name="HPProgressBar" type="TextureProgressBar" parent="ProgressBar" unique_id=2014967888]
offset_left = 36.0
offset_top = 90.0
offset_right = 105.0
offset_bottom = 1052.0
value = 100.0
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("8_6i5p8")
texture_progress = ExtResource("9_hypfh")

[node name="ProgressLabel" type="Label" parent="ProgressBar/HPProgressBar" unique_id=1135172914]
layout_mode = 0
offset_left = 95.0
offset_top = 451.0
offset_right = 246.0
offset_bottom = 520.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m0pnn")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_y07bw")
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XOXOProgressBar" type="TextureProgressBar" parent="ProgressBar" unique_id=213080646]
texture_filter = 1
offset_left = 547.0
offset_top = 9.0
offset_right = 1505.0
offset_bottom = 61.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("10_fj0mw")
texture_progress = ExtResource("11_qv144")

[node name="ProgressLabel" type="Label" parent="ProgressBar/XOXOProgressBar" unique_id=1214081942]
layout_mode = 0
offset_left = -160.0
offset_right = -9.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m0pnn")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_qy0b4")
text = "25/25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CringeProgressBar" type="TextureProgressBar" parent="ProgressBar" unique_id=498660078]
texture_filter = 1
offset_left = 547.0
offset_top = 73.0
offset_right = 939.0
offset_bottom = 117.0
max_value = 10.0
nine_patch_stretch = true
texture_under = ExtResource("12_yr6d2")
texture_progress = ExtResource("13_y44e5")

[node name="ProgressLabel" type="Label" parent="ProgressBar/CringeProgressBar" unique_id=545809496]
layout_mode = 0
offset_left = -127.0
offset_right = -9.0
offset_bottom = 44.270832
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m0pnn")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_yrp1n")
text = "0/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=226546805]
stream = ExtResource("14_d6oqk")
volume_db = -25.0
autoplay = true
bus = &"Music"

[node name="GirlSprite" type="SpineSprite" parent="." unique_id=1075071169]
skeleton_data_res = ExtResource("15_lqkjo")
preview_skin = "level1"
preview_animation = "idle"
preview_frame = false
preview_time = 0.0
texture_filter = 2
position = Vector2(939, 1080)
scale = Vector2(0.6, 0.6)
script = ExtResource("17_13fv4")

[node name="Phase_Sound" type="AudioStreamPlayer" parent="GirlSprite" unique_id=1390044754]
stream = ExtResource("17_l6odt")
volume_db = -14.263
pitch_scale = 1.1
bus = &"SFX"

[node name="Attack_Sound" type="AudioStreamPlayer" parent="GirlSprite" unique_id=283123143]
stream = ExtResource("20_16b76")
pitch_scale = 1.1
bus = &"SFX"

[node name="Dammage_Sound" type="AudioStreamPlayer" parent="GirlSprite" unique_id=123542567]
stream = ExtResource("21_4elxp")
volume_db = -80.0
pitch_scale = 1.2

[node name="MouthPos" type="Marker2D" parent="GirlSprite" unique_id=185581483]
show_behind_parent = true
position = Vector2(-93.333496, -1256.6672)

[node name="SpeechTimer" type="Timer" parent="GirlSprite" unique_id=873796563]
autostart = true

[node name="VictoryLayer" type="CanvasLayer" parent="." unique_id=2143042670]
visible = false
script = ExtResource("19_13fv4")

[node name="ColorRect" type="ColorRect" parent="VictoryLayer" unique_id=81177094]
offset_right = 1916.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.6862745)

[node name="Label" type="Label" parent="VictoryLayer" unique_id=1113425993]
offset_right = 1920.0
offset_bottom = 511.0
theme_override_colors/font_color = Color(0.48066747, 0.8468294, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("19_5jsyb")
theme_override_font_sizes/font_size = 200
text = "You Won!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VictoryLayer" unique_id=614668268]
offset_top = 192.0
offset_right = 1920.0
offset_bottom = 703.0
theme_override_colors/font_color = Color(0.48066747, 0.8468294, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("19_5jsyb")
theme_override_font_sizes/font_size = 75
text = "You've completed the training!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="VictoryLayer" unique_id=128740534]
offset_left = 547.0
offset_top = 565.0
offset_right = 1383.0
offset_bottom = 931.0

[node name="Control" type="Control" parent="VictoryLayer/HBoxContainer" unique_id=1135072861]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="VictoryLayer/HBoxContainer" unique_id=618637025]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.20392157, 0.20392157, 0.20392157, 1)
theme_override_colors/font_hover_color = Color(0.20392157, 0.20392157, 0.20392157, 1)
theme_override_fonts/font = ExtResource("19_5jsyb")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_07afl")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_x06o8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_x06o8")
theme_override_styles/hover = SubResource("StyleBoxFlat_x06o8")
text = "Back to Menu"

[node name="Vignette" type="ColorRect" parent="." unique_id=899936353]
z_index = 4096
material = SubResource("ShaderMaterial_nsg1c")
offset_left = -621.0
offset_top = -339.0
offset_right = 2579.0
offset_bottom = 1511.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Card" type="AudioStreamPlayer" parent="." unique_id=1495273999]
stream = ExtResource("21_axhrf")
volume_db = -12.0
bus = &"SFX"

[node name="Click" type="AudioStreamPlayer" parent="." unique_id=1851586523]
process_mode = 3
stream = ExtResource("22_4kc7n")
volume_db = -14.263
bus = &"SFX"

[node name="LoseLayer" type="CanvasLayer" parent="." unique_id=1295918260]
visible = false
script = ExtResource("23_uludq")

[node name="ColorRect" type="ColorRect" parent="LoseLayer" unique_id=590687679]
offset_right = 1916.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.6862745)

[node name="Label" type="Label" parent="LoseLayer" unique_id=1841579800]
offset_top = -114.0
offset_right = 1920.0
offset_bottom = 426.0
theme_override_colors/font_color = Color(0.9843137, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("19_5jsyb")
theme_override_font_sizes/font_size = 200
text = "Lose!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="LoseLayer" unique_id=123021756]
offset_top = 147.0
offset_right = 1920.0
offset_bottom = 707.0
theme_override_colors/font_color = Color(0.98274976, 6.08854e-06, 1.540184e-06, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("19_5jsyb")
theme_override_font_sizes/font_size = 75
text = "Weak moves, bro.
 Keep practicing
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="LoseLayer" unique_id=748130719]
offset_left = 547.0
offset_top = 659.0
offset_right = 1383.0
offset_bottom = 1025.0

[node name="Restart1" type="Button" parent="LoseLayer/HBoxContainer" unique_id=5904200]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.20511743, 0.20511743, 0.20511743, 1)
theme_override_colors/font_hover_color = Color(0.20392157, 0.20392157, 0.20392157, 1)
theme_override_fonts/font = ExtResource("19_5jsyb")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_e7d2v")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_xoy05")
theme_override_styles/pressed = SubResource("StyleBoxFlat_07gt7")
theme_override_styles/hover = SubResource("StyleBoxFlat_07gt7")
text = "Restart"

[node name="Control" type="Control" parent="LoseLayer/HBoxContainer" unique_id=618246607]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="MainMenuButton1" type="Button" parent="LoseLayer/HBoxContainer" unique_id=958356805]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.20392157, 0.20392157, 0.20392157, 1)
theme_override_colors/font_hover_color = Color(0.20392157, 0.20392157, 0.20392157, 1)
theme_override_fonts/font = ExtResource("19_5jsyb")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_02tlh")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_07gt7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_07gt7")
theme_override_styles/hover = SubResource("StyleBoxFlat_07gt7")
text = "Back to Menu"

[node name="Click" type="AudioStreamPlayer" parent="LoseLayer" unique_id=425070002]
process_mode = 3
stream = ExtResource("22_4kc7n")
volume_db = -14.263
bus = &"SFX"

[node name="CringeLayer" type="CanvasLayer" parent="." unique_id=585913828]
visible = false
script = ExtResource("24_r1pnm")

[node name="ColorRect" type="ColorRect" parent="CringeLayer" unique_id=464667984]
offset_right = 1916.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.6862745)

[node name="Label" type="Label" parent="CringeLayer" unique_id=613163948]
offset_top = -114.0
offset_right = 1948.0
offset_bottom = 389.0
theme_override_colors/font_color = Color(0.69411767, 0, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("19_5jsyb")
theme_override_font_sizes/font_size = 200
text = "Cringe"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CringeLayer" unique_id=525236121]
offset_top = 224.0
offset_right = 1920.0
offset_bottom = 735.0
theme_override_colors/font_color = Color(0.69411767, 0, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("19_5jsyb")
theme_override_font_sizes/font_size = 75
text = "Bro, you're cringe,
the main character aura
won't help you here.
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="CringeLayer" unique_id=565247965]
offset_left = 547.0
offset_top = 659.0
offset_right = 1383.0
offset_bottom = 1025.0

[node name="Restart1" type="Button" parent="CringeLayer/HBoxContainer" unique_id=426566157]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.20511743, 0.20511743, 0.20511743, 1)
theme_override_colors/font_hover_color = Color(0.20392157, 0.20392157, 0.20392157, 1)
theme_override_fonts/font = ExtResource("19_5jsyb")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_2mqnv")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_bc1d3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1cmit")
theme_override_styles/hover = SubResource("StyleBoxFlat_1cmit")
text = "Restart"

[node name="Control" type="Control" parent="CringeLayer/HBoxContainer" unique_id=528637191]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="MainMenuButton1" type="Button" parent="CringeLayer/HBoxContainer" unique_id=1209298778]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.20392157, 0.20392157, 0.20392157, 1)
theme_override_colors/font_hover_color = Color(0.20392157, 0.20392157, 0.20392157, 1)
theme_override_fonts/font = ExtResource("19_5jsyb")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_t08fx")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_1cmit")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1cmit")
theme_override_styles/hover = SubResource("StyleBoxFlat_1cmit")
text = "Back to Menu"

[node name="Click" type="AudioStreamPlayer" parent="CringeLayer" unique_id=1787687651]
process_mode = 3
stream = ExtResource("22_4kc7n")
volume_db = -14.263
bus = &"SFX"

[node name="EnergyContainer" type="HBoxContainer" parent="." unique_id=605632102]
texture_filter = 1
offset_left = 1527.0
offset_top = 568.0
offset_right = 1880.0
offset_bottom = 608.0
theme_override_constants/separation = 10

[connection signal="pressed" from="TurnButton" to="TurnManager" method="_on_turn_button_pressed"]
[connection signal="pressed" from="CringeLayer/HBoxContainer/Restart1" to="CringeLayer" method="_on_restart_1_pressed"]
[connection signal="pressed" from="CringeLayer/HBoxContainer/MainMenuButton1" to="CringeLayer" method="_on_main_menu_button_1_pressed"]
